basicHeaderStyle: put navIcons into a flex container for correct spacing between the elements, removed redundant code

--- a/css/blogStyle.css
+++ b/css/blogStyle.css
@@ -62,6 +62,7 @@ body header nav #linksInteractive ul #nav-marker {
   font-weight: bold;
 }
 body header nav #linksInteractive #navIcons {
+  display: flex;
   margin-left: 12.5px;
 }
 body header nav #linksInteractive #navIcons img {
@@ -114,6 +115,9 @@ body footer {
   align-items: center;
   margin-top: 59px;
 }
+body footer #footerIcons {
+  display: flex;
+}
 body footer #footerIcons img {
   margin-left: 1.2em;
   margin-right: 1.2em;
@@ -121,7 +125,8 @@ body footer #footerIcons img {
   width: 24px;
 }
 body footer p {
-  margin: 0.2em 0 0 0;
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 body footer {
   margin-top: 50px !important;
