--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -37,7 +37,7 @@
     display: none;
   }
   body header nav #navIcons {
-    display: none;
+    display: none !important;
   }
   body .contact-main-row {
     margin-left: auto !important;
@@ -107,6 +107,7 @@ body header nav #linksInteractive ul #nav-marker {
   font-weight: bold;
 }
 body header nav #linksInteractive #navIcons {
+  display: flex;
   margin-left: 12.5px;
 }
 body header nav #linksInteractive #navIcons img {
@@ -174,6 +175,9 @@ body footer {
   align-items: center;
   margin-top: 59px;
 }
+body footer #footerIcons {
+  display: flex;
+}
 body footer #footerIcons img {
   margin-left: 1.2em;
   margin-right: 1.2em;
@@ -181,7 +185,8 @@ body footer #footerIcons img {
   width: 24px;
 }
 body footer p {
-  margin: 0.2em 0 0 0;
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 
 /*# sourceMappingURL=contactStyle.css.map */
