--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -36,7 +36,7 @@
     display: none;
   }
   body nav #navIcons {
-    display: none;
+    display: none !important;
   }
   body #main-container {
     margin-left: auto !important;
@@ -103,6 +103,7 @@ body header nav #linksInteractive ul #nav-marker {
   font-weight: bold;
 }
 body header nav #linksInteractive #navIcons {
+  display: flex;
   margin-left: 12.5px;
 }
 body header nav #linksInteractive #navIcons img {
@@ -200,6 +201,9 @@ body footer {
   align-items: center;
   margin-top: 59px;
 }
+body footer #footerIcons {
+  display: flex;
+}
 body footer #footerIcons img {
   margin-left: 1.2em;
   margin-right: 1.2em;
@@ -207,7 +211,8 @@ body footer #footerIcons img {
   width: 24px;
 }
 body footer p {
-  margin: 0.2em 0 0 0;
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 
 /*# sourceMappingURL=indexStyle.css.map */
