--- a/sass/basicHeaderStyle.scss
+++ b/sass/basicHeaderStyle.scss
@@ -46,16 +46,12 @@ header {
       }
 
       #navIcons {
+        display: flex;
         margin-left: 12.5px;
 
         img {
           margin-left: 7.5px;
           margin-right: 7.5px;
-          //padding: -4px;
-          //margin-right: 0;
-          //margin-left: 0;
-          //margin-left: 5.5px;
-          //margin-right: 5.5px;
           height: 16px;
           width: 16px;
         }
