--- a/sass/contactResponsive.scss
+++ b/sass/contactResponsive.scss
@@ -47,7 +47,7 @@
         }
 
         #navIcons {
-          display: none;
+          display: none !important;
         }
       }
     }
