--- a/sass/footerStyle.scss
+++ b/sass/footerStyle.scss
@@ -12,6 +12,8 @@ footer {
   //margin-top: 0;
 
   #footerIcons {
+    display: flex;
+
     img {
       margin-left: 1.2em;
       margin-right: 1.2em;
@@ -21,6 +23,7 @@ footer {
   }
 
   p {
-    margin: 0.2em 0 0 0;
+    margin-top: 1em;
+    margin-bottom: 0;
   }
 }
